Fixed spacing of pricing/sizing

--- a/app/assets/stylesheets/api/inventory_item.scss
+++ b/app/assets/stylesheets/api/inventory_item.scss
@@ -2,8 +2,20 @@
   border-top: 1px solid #b1b1b1;
   margin-bottom: 46px;
   display: flex;
-  padding-top: 5%;
+  padding-top: 8%;
   width: 90%;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 1280px) {
+  .ProductItem-list {
+    border-top: 1px solid #b1b1b1;
+    margin-bottom: 46px;
+    display: flex;
+    padding-top: 9%;
+    width: 90%;
+    align-items: center;
+    justify-content: center;
+  }
 }
